--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.nitorcreations</groupId>
     <artifactId>yaml-test-utils</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
 
     <name>YamlTestUtils</name>
     <packaging>jar</packaging>
